@@ -1,3 +1,4 @@
+- limited ability to fly-kick by requiring an impulse move within impulsemeleedelay (750ms)
 - preliminary "ground pound" impulse move
 - reduced damage for flamer and burning/bleeding
 - added physics scaling vars to complement/replace the overrides
